# portfolio

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .pylintrc  AGENTS.md  GEMINI.md  README.md  docker-compose.collector.yml  docker-compose.common.yml  docker-compose.prod.yml  docker-compose.stage.yml  docker-compose.traefik.yml  docker-compose.yml  pr_message.md  pyproject.toml
backend/: .coverage  .dockerignore  .flake8  .gitignore  .safety-project.ini  DEFAULT.env  Dockerfile  MIGRATION_DEPLOYMENT.md  README.md  SETUP.md  activate_env.sh  api_tests.http  celerybeat-schedule  celerybeat-schedule-shm  conftest.py  coverage.json  coverage.xml  docker-compose.test.yml  entrypoint.sh  help_output.txt  pyproject.toml  safety_output.json  safety_report.json
backend/astrophotography/: admin.py  admin_mixins.py  apps.py  constants.py  forms.py  models.py  pagination.py  protocols.py  serializers.py  services.py  signals.py  tasks.py  types.py  urls.py  utils.py  views.py
backend/astrophotography/agent/: __init__.py  agent.py
backend/astrophotography/migrations/: 0001_initial.py  0002_alter_astroimage_celestial_object.py  0002_astroimage_thumbnail.py  0002_backgroundmainpage.py  0002_consolidated_updates.py  0002_refactor_tag_data.py  0003_alter_astroimage_celestial_object.py  0003_alter_place_options_alter_astroimage_slug_and_more.py  0003_astroimage_tags.py  0003_fix_tag_slug_schema.py  0003_meteorsmainpageconfig.py  0004_alter_astroimage_exposure_details_and_more.py  0004_alter_astroimage_options.py  0004_alter_meteorsmainpageconfig_bolid_interval.py  0004_alter_placetranslation_unique_together_and_more.py  0004_uuidtaggeditem_alter_astroimage_tags.py  0005_alter_place_options.py  0005_astroimage_travel_country.py  0005_astroimage_zoom.py  0005_meteorsmainpageconfig_bolid_duration_range_and_more.py  0006_alter_astroimage_celestial_object.py  0006_alter_camera_options_alter_lens_options_and_more.py  0006_astroimage_translations_and_more.py  0006_mainpagelocationslider.py  0007_alter_astroimage_celestial_object.py  0007_alter_camera_name_alter_lens_name_alter_place_name_and_more.py  0007_alter_place_options_remove_astroimage_description_and_more.py  0007_mainpagelocationslider_place.py  0008_alter_astroimage_astrobin_url_and_more.py  0008_alter_astroimagetranslation_name_and_more.py  0008_alter_camera_name_alter_lens_name_alter_place_name_and_more.py  0008_remove_mainpagebackgroundimage_name_and_more.py  0009_alter_camera_options_alter_lens_options_and_more.py  0009_alter_placetranslation_unique_together.py  0009_rename_backgroundmainpage_mainpagebackgroundimage_and_more.py  0010_mainpagelocationtranslation_highlight_title.py  0010_remove_camera_name_remove_lens_name_and_more.py  0010_remove_mainpagelocationslider_place.py  0011_alter_camera_options_alter_lens_options_and_more.py  0011_fix_mainpagelocation_sequence.py  (+46 more)
backend/astrophotography/tests/: conftest.py  factories.py  test_admin.py  test_commands.py  test_country_place_filtering.py  test_image_url_viewset.py  test_models.py  test_secure_media.py  test_serializers.py  test_slugs.py  test_tags.py  test_translation_serializers.py  test_travel_highlights_slugs.py  test_views.py
backend/common/: celery.py  constants.py  exceptions.py  image_processing.py  middleware.py  mixins.py  protocols.py  serializers.py  services.py  ssr_cache.py  tasks.py  throttling.py  types.py
backend/common/decorators/: cache.py
backend/common/llm/: __init__.py  factory.py  protocols.py  providers.py  registry.py
backend/common/tests/: image_helpers.py  test_email_services.py  test_image_processing.py  test_image_specs.py  test_image_utils.py  test_registry.py
backend/common/utils/: image.py  logging.py  signing.py  text.py
backend/core/: __init__.py  admin.py  admin_config.py  agents.py  ai_agents.py  apps.py  cache_service.py  celery.py  errors.py  fixtures.py  forms.py  mixins.py  models.py  protocols.py  scripts.py  serializers.py  services.py  settings.py  signals.py  sitemaps.py  sites.py  tasks.py  test_settings.py  throttling.py  urls.py  views.py  widgets.py
backend/core/celery/: __init__.py  app.py  tasks.py
backend/core/migrations/: 0001_initial.py  0002_landingpagesettings_lastimages_enabled.py  0002_landingpagesettings_serve_webp_images.py  0002_remove_landingpagesettings_meteors_enabled_and_more.py  0002_translationtask.py  0003_alter_landingpagesettings_serve_webp_images.py  0003_remove_landingpagesettings_location_slider_enabled_and_more.py  0003_remove_translationtask_core_transl_content_8748c9_idx_and_more.py  0004_landingpagesettings_latest_filters.py  0004_landingpagesettings_meteors_enabled.py  0005_landingpagesettings_shop_enabled.py  0006_imagevariant.py  0007_alter_imagevariant_object_id.py  0008_remove_landingpagesettings_serve_webp_images_and_more.py
backend/core/tests/: factories.py  test_admin_media_urls.py  test_admin_visibility.py  test_backfill_baseimage_fields.py  test_caching.py  (+15 more)
backend/inbox/: admin.py  apps.py  middleware.py  models.py  serializers.py  services.py  tasks.py  urls.py  views.py
backend/monitoring/: admin.py  agents.py  apps.py  contracts.py  log_sources.json  log_sources.py  models.py  monitoring_agent_runner.py  prompt_assets.py  protocols.py  services.py  sitemap_services.py  tasks.py  types.py  views.py
backend/programming/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
backend/scripts/: __init__.py  release_entrypoint.py
backend/settings/: api_urls.py  asgi.py  base.py  celery.py  tests.py  urls.py  wsgi.py
backend/shop/: __init__.py  admin.py  apps.py  forms.py  models.py  serializers.py  signals.py  tasks.py  types.py  urls.py  views.py
backend/translation/: admin.py  agents.py  apps.py  factory.py  fixtures.py  mixins.py  models.py  protocols.py  providers.py  services.py  tasks.py  urls.py  views.py
backend/users/: admin.py  apps.py  models.py  serializers.py  signals.py  tasks.py  types.py  urls.py  views.py
collector/: README.md  portfolio-log-collector.cron  pyproject.toml
collector/tests/: test_config.py  test_services.py
(+639 files in other folders)
