[tool.poetry]
name = "backend"
version = "1.1.0"
description = "Portfolio backend with Django REST Framework"
authors = ["l.remkowicz@gmail.com <l.remkowicz@gmail.com>"]
readme = "README.md"
packages = [
    { include = "core" },
    { include = "users" },
    { include = "astrophotography" },
    { include = "programming" },
    { include = "inbox" }
]

[tool.poetry.scripts]
test = "scripts:test"
test-cov = "scripts:test_cov"
security = "scripts:security"

[tool.poetry.dependencies]
python = ">=3.13,<4.0"
django = ">=6.0.2"
djangorestframework = ">=3.14.0"
pillow = ">=10.0.0"
django-environ = ">=0.11.2"
django-cors-headers = ">=4.0.0"
psycopg2-binary = ">=2.9.0"
django-axes = ">=8.1.0"
gunicorn = "^24.1.1"
django-countries = ">=8.2.0,<9.0.0"
django-select2 = ">=8.4.8,<9.0.0"
django-ckeditor-5 = ">=0.2.19"
redis = ">=5.2.0"
openai = "^1.0.0"
django-extensions = "^3.2.0"
django-parler = "^2.3"
django-parler-rest = "^2.2"
beautifulsoup4 = "^4.14.3"
celery = {extras = ["redis"], version = "^5.4.0"}
flower = "^2.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.2"
pytest-django = "^4.5.0"
pytest-cov = "^7.0.0"
coverage = "^7.0.0"
black = ">=24.0.0"
isort = "^7.0.0"
flake8 = "^6.0.0"
mypy = "^1.5.0"
django-stubs = "^5.2.9"
djangorestframework-stubs = "^3.14.0"
pre-commit = "^4.3.0"
safety = "^3.7.0"
flake8-pyproject = "^1.2.4"
factory-boy = "^3.3.0"
Faker = "^37.0.0"
types-requests = "^2.32.0"
watchdog = "^6.0.0"
pytest-mock = "^3.15.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py313']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
  | migrations
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 100
known_django = "django"
known_first_party = ["astrophotography", "programming", "users", "inbox", "core", "common", "scripts", "settings"]
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "DJANGO", "FIRSTPARTY", "LOCALFOLDER"]

[tool.mypy]
python_version = "3.13"
exclude = ["migrations/", "tests/"]
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
plugins = [
    "mypy_django_plugin.main",
    "mypy_drf_plugin.main"
]

[tool.django-stubs]
django_settings_module = "settings.base"

[[tool.mypy.overrides]]
module = [
    "PIL.*",
    "celery.*",
    "taggit.*",
    "parler.*",
    "parler_rest.*",
    "django_countries.*",
    "django_ckeditor_5.*",
    "django_select2.*",
    "environ.*",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "*.tests.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = [
    "core.models",
    "core.models",
    "programming.models",
    "programming.serializers",
    "users.models",
    "astrophotography.models",
    "astrophotography.serializers",
]
disable_error_code = [
    "attr-defined",
    "var-annotated",
    "misc",
    "return-value",
    "assignment",
    "django-manager-missing",
    "unused-ignore",
]

[[tool.mypy.overrides]]
module = [
    "translation.mixins",
    "programming.admin",
    "translation.services",
    "translation.tasks",
    "astrophotography.management.commands.fix_parler_language_codes",
    "users.admin",
]
disable_error_code = [
    "attr-defined",
    "no-any-return",
    "override",
    "unused-ignore",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "settings.tests"
pythonpath = ["."]
addopts = "--tb=short --strict-markers --reuse-db"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "django_db: marks tests that require database access",
]
filterwarnings = [
    "ignore:Cache backend does not support delete_pattern:UserWarning",
]

[tool.coverage.run]
omit = [
    "**/manage.py",
    "**/conftest.py",
    "**/core/scripts.py",
    "**/__init__.py",
    "**/wsgi.py",
    "**/asgi.py",
    "**/urls.py",
    "**/migrations/*",
    "**/tests/*",
]

[tool.flake8]
max-line-length = 100
extend-ignore = ["E203", "W503"]
exclude = [
    ".git",
    "__pycache__",
    ".venv",
    "venv",
    "migrations",
    "node_modules",
    ".pytest_cache",
    ".mypy_cache",
    "build",
    "dist"
]
per-file-ignores = [
    "__init__.py:F401",
    "migrations/*:E501",
    "settings/tests.py:E402"
]
max-complexity = 10
