[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "backend"
version = "1.1.0"
description = "Portfolio backend with Django REST Framework"
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "django==6.0.3",
    "djangorestframework==3.17.1",
    "pillow==12.1.1",
    "django-environ==0.13.0",
    "django-cors-headers==4.9.0",
    "psycopg2==2.9.11",
    "django-axes==8.3.1",
    "gunicorn==24.1.1",
    "django-countries==8.2.0",
    "django-select2==8.4.8",
    "django-ckeditor-5==0.2.20",
    "redis==5.3.1",
    "openai==1.109.1",
    "django-extensions==3.2.3",
    "django-parler==2.3",
    "django-parler-rest==2.2",
    "beautifulsoup4==4.14.3",
    "celery[redis]==5.6.3",
    "flower==2.0.1",
    "sentry-sdk==2.57.0",
    "requests==2.33.1",
    "django-model-utils==5.0.0",
    "django-jazzmin==3.0.3",
    "ipython==9.12.0",
]

[project.scripts]
test = "scripts:test"
test-cov = "scripts:test_cov"
security = "scripts:security"

[dependency-groups]
dev = [
    "pytest==9.0.2",
    "pytest-django==4.11.1",
    "pytest-cov==7.0.0",
    "coverage==7.13.3",
    "black==26.3.1",
    "isort==7.0.0",
    "flake8==7.3.0",
    "mypy==1.19.1",
    "django-stubs==5.2.9",
    "djangorestframework-stubs==3.16.8",
    "pre-commit==4.5.1",
    "safety==3.7.0",
    "flake8-pyproject==1.2.4",
    "factory-boy==3.3.3",
    "Faker==37.12.0",
    "types-requests==2.32.4.20260107",
    "watchdog==6.0.0",
    "pytest-mock==3.15.1",
    "ruff==0.15.9",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = [
    "astrophotography",
    "astrophotography.*",
    "common",
    "common.*",
    "core",
    "core.*",
    "inbox",
    "inbox.*",
    "monitoring",
    "monitoring.*",
    "programming",
    "programming.*",
    "scripts",
    "scripts.*",
    "settings",
    "settings.*",
    "shop",
    "shop.*",
    "translation",
    "translation.*",
    "users",
    "users.*",
]
exclude = [
    "docker-logs",
    "media",
    "staticfiles",
]

[tool.setuptools.package-data]
astrophotography = [
    "agent/assets/prompts/*.md",
    "templates/**/*.html",
    "static/**/*",
    "locale/**/*.po",
    "locale/**/*.mo",
]
core = [
    "templates/**/*.html",
    "static/**/*",
    "locale/**/*.po",
    "locale/**/*.mo",
]
inbox = [
    "templates/**/*.html",
]
monitoring = [
    "agent_assets/**/*",
    "log_sources.json",
    "templates/**/*.html",
    "static/**/*",
    "locale/**/*.po",
    "locale/**/*.mo",
]
shop = [
    "templates/**/*.html",
    "static/**/*",
    "locale/**/*.po",
    "locale/**/*.mo",
]
translation = [
    "templates/**/*.html",
]
users = [
    "templates/**/*.html",
    "static/**/*",
]

[tool.black]
line-length = 100
target-version = ['py313']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
  | migrations
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 100
known_django = "django"
known_first_party = ["astrophotography", "programming", "users", "inbox", "core", "common", "scripts", "settings"]
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "DJANGO", "FIRSTPARTY", "LOCALFOLDER"]

[tool.mypy]
python_version = "3.13"
exclude = ["migrations/", "tests/", "test_slug.py"]
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
plugins = [
    "mypy_django_plugin.main",
    "mypy_drf_plugin.main"
]

[tool.django-stubs]
django_settings_module = "settings.base"

[[tool.mypy.overrides]]
module = [
    "PIL.*",
    "celery.*",
    "taggit.*",
    "parler.*",
    "parler_rest.*",
    "django_countries.*",
    "django_ckeditor_5.*",
    "django_select2.*",
    "environ.*",
    "psycopg2.*",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "*.tests.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = [
    "core.models",
    "core.models",
    "programming.models",
    "programming.serializers",
    "users.models",
    "astrophotography.models",
    "astrophotography.serializers",
]
disable_error_code = [
    "attr-defined",
    "var-annotated",
    "misc",
    "return-value",
    "assignment",
    "django-manager-missing",
    "unused-ignore",
]

[[tool.mypy.overrides]]
module = "shop.models"
disable_error_code = ["var-annotated"]

[[tool.mypy.overrides]]
module = [
    "translation.mixins",
    "programming.admin",
    "translation.services",
    "translation.tasks",
    "astrophotography.management.commands.fix_parler_language_codes",
    "users.admin",
]
disable_error_code = [
    "attr-defined",
    "no-any-return",
    "override",
    "unused-ignore",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "settings.tests"
pythonpath = ["."]
addopts = "--tb=short --strict-markers --reuse-db"
testpaths = [
    "astrophotography/tests",
    "users/tests",
    "translation/tests",
    "monitoring/tests",
    "programming/tests",
    "inbox/tests",
    "core/tests",
    "common/tests",
    "shop/tests",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "django_db: marks tests that require database access",
]
filterwarnings = [
    "ignore:Cache backend does not support delete_pattern:UserWarning",
]

[tool.coverage.run]
omit = [
    "**/manage.py",
    "**/conftest.py",
    "**/core/scripts.py",
    "**/__init__.py",
    "**/wsgi.py",
    "**/asgi.py",
    "**/urls.py",
    "**/migrations/*",
    "**/tests/*",
]

[tool.flake8]
max-line-length = 100
extend-ignore = ["E203", "W503"]
exclude = [
    ".git",
    "__pycache__",
    ".venv",
    "venv",
    "migrations",
    "node_modules",
    ".pytest_cache",
    ".mypy_cache",
    "build",
    "dist"
]
per-file-ignores = [
    "__init__.py:F401",
    "migrations/*:E501",
    "settings/tests.py:E402",
    "**/signals.py:ARG001"
]
max-complexity = 10

[tool.ruff]
line-length = 100
target-version = "py313"
extend-exclude = ["migrations"]

[tool.ruff.lint]
select = ["E", "F", "W", "B", "ARG", "UP", "PT"]

[tool.ruff.lint.per-file-ignores]
"**/tests/*.py" = ["ARG"]
"**/tests/conftest.py" = ["ARG"]
"**/signals.py" = ["ARG"]
"**/management/commands/*.py" = ["ARG"]
"**/admin.py" = ["ARG"]
"**/views.py" = ["ARG"]
"common/throttling.py" = ["ARG"]
"backend/common/throttling.py" = ["ARG"]
"core/models.py" = ["ARG"]
"backend/core/models.py" = ["ARG"]
"settings/tests.py" = ["F403", "F405"]
